--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,8 @@ jobs:
     - name: Run checks
       run: make test
 
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
 
     - uses: reviewdog/action-setup@v1
       with:
