--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,14 +45,14 @@ jobs:
     - name: Run checks
       run: make test
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
+#    - name: Upload coverage reports to Codecov
+#      uses: codecov/codecov-action@v3
 
     - uses: reviewdog/action-setup@v1
       with:
         reviewdog_version: latest # Optional. [latest,nightly,v.X.Y.Z]
-    # Upload coverage to codecov: https://codecov.io/
-   #- name: Upload coverage to Codecov
-     #uses: codecov/codecov-action@v3
-     #with:
-       #file: ./coverage.xml
+      Upload coverage to codecov: https://codecov.io/
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
