--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        include:
+          - os: ubuntu-20.04
+         #- os: windows-latest
         python-version: ['3.8.9']
 
     steps:
@@ -40,11 +43,6 @@ jobs:
 
     - name: Run checks
       run: make test
-
-    - uses: reviewdog/action-setup@v1
-      with:
-        reviewdog_version: latest # Optional. [latest,nightly,v.X.Y.Z]
-    - run: reviewdog -version
 
     # Upload coverage to codecov: https://codecov.io/
     - name: Upload coverage to Codecov
