--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ classifiers = [
 python = "^3.8.1"
 detect-secrets = "^1.5.0"
 
+[tool.poetry.group.dev.dependencies]
+pyinstaller = "^6"
+
 [tool.poetry.group.test.dependencies]
 mypy = "^1.10"
 
