--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,23 +17,23 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "3.12"
 detect-secrets = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
-pyinstaller = "^6"
+pyinstaller = "^6.10.0"
 
 [tool.poetry.group.test.dependencies]
 mypy = "^1.10"
 
-wemake-python-styleguide = "^0.18"
+wemake-python-styleguide = "^0.19"
 flake8-pytest-style = "^2.0"
 doc8 = "^1.1"
 nitpick = "^0.35"
 
-safety = "^3.2.0"
+safety = "^3.2.5"
 
-pytest = "^8.2"
+pytest = "^8.3"
 pytest-cov = "^5.0"
 pytest-randomly = "^3.15"
 
@@ -41,7 +41,7 @@ pytest-randomly = "^3.15"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "^7.1"
+sphinx = "^8.0"
 sphinx-autodoc-typehints = "^2.0"
 m2r2 = "^0.3"
 tomli = "^2.0"
